<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textColor="#FFFF"
        android:text="@string/str_sign_below"
        android:textSize="40sp" />


    <com.williamww.silkysignature.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mOkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/str_ok" />

        <Button
            android:id="@+id/mClearButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/str_clear" />

    </LinearLayout>


</LinearLayout>

