<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Trip ID" />

                <TextView
                    android:id="@+id/txtTripId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="txt_tripid" />

                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Date" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="" />
                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Start KM" />

                <EditText
                    android:id="@+id/et_start_km"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="" />

                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="End KM" />

                <EditText
                    android:id="@+id/et_end_km"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="" />

                <!---                           -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Start Date and Time " />

                <TextView
                    android:id="@+id/txt_start_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="" />


                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="End Date and Time " />

                <TextView
                    android:id="@+id/txt_end_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="" />

                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="User Name" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="" />

                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Signature " />

                <!-- <ImageView
                     android:id="@+id/img_signature"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:text="" />-->

                <com.williamww.silkysignature.views.SignaturePad
                    android:id="@+id/signature_pad"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <LinearLayout
                    android:id="@+id/buttons_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <Button
                        android:id="@+id/mSaveButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:maxLines="1"
                        android:text="@string/save_signature" />

                    <Button
                        android:id="@+id/mCompressButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:maxLines="1"
                        android:text="@string/compress_signature" />

                    <Button
                        android:id="@+id/mClearButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:maxLines="1"
                        android:text="@string/clear_pad" />

                </LinearLayout>


                <!---                           -->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Remarks" />

                <EditText
                    android:id="@+id/et_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine">

                    <requestFocus />
                </EditText>


                <!---                           -->


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/submit" />


                <!---                           -->


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
